<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".ChoixModeJeu">

        <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                        android:textSize="26sp"
                        android:padding="10dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@raw/deconnect"
                        android:onClick="disconnect"
                        android:id="@+id/btnDisconnect"
                        android:layout_margin="10dp"/>
                <TextView
                        android:text="User:"
                        android:textSize="26sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:layout_margin="10dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#00A125"
                        android:textSize="26sp"
                        android:id="@+id/txtVUser"
                        android:layout_margin="10dp"/>
        </LinearLayout>

        <TextView
                android:text="@string/modeJeu"
                android:textSize="26sp"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/ButtonClassique"
                android:text="@string/classique"
                android:textSize="20sp"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="StartClassique" android:background="@android:color/holo_green_dark"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                        android:text="@string/difficulté"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <RadioGroup
                        android:id="@+id/DifficulteRadioGroup"
                        android:checkedButton="@id/DifficulteMedium"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                                android:id="@+id/DifficulteEasy"
                                android:text="@string/easy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        <RadioButton
                                android:id="@+id/DifficulteMedium"
                                android:text="@string/medium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        <RadioButton
                                android:id="@+id/DifficulteHard"
                                android:text="@string/hard"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                </RadioGroup>
        </LinearLayout>

        <Button
                android:id="@+id/ButtonDefi"
                android:text="@string/defi"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:onClick="StartDefi" android:background="@android:color/holo_blue_dark"/>

</LinearLayout>